# ColladaTools

./: AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.txt
avreader/: CMakeLists.txt
avreader/avreader/: avreader.h  avreaderh5.h
avreader/src/: avreader.cpp  avreaderh5.cpp  avreaderh5.h
cmake/: FindCOLLADA.cmake
data/: conversion.txt  elementary.h5  generate_data.py  simple_arm_physics.dae  simplearm.h5  simplearm_animation.dae  simplearm_animation_flat.dae  simplearm_animation_notflat.dae  simplearm_physics.dae  simplearm_scene_flat-new.dae  simplearm_scene_flat.dae  simplearm_scene_notflat.dae  simplearm_simulation_notflat.h5  simplearm_traj_flat.h5  test.dae
hdf5/: README
hdf5/include/: H5pubconf.h  h5_dble_interface.mod  h5a.mod  h5d.mod  h5e.mod  h5f.mod  h5fortran_types.mod  h5g.mod  h5global.mod  h5i.mod  h5im.mod  h5l.mod  h5lib.mod  h5lt.mod  h5o.mod  h5p.mod  h5r.mod  h5s.mod  h5t.mod  h5tb.mod  h5z.mod  hdf5.mod
hdf5/lib/: libhdf5.la  libhdf5.settings  libhdf5_cpp.la  libhdf5_fortran.la  libhdf5_hl.la  libhdf5_hl_cpp.la  libhdf5hl_fortran.la
src/: CMakeLists.txt  FixBundle.cmake.in  avreader.cpp  avreaderh5.cpp  avreaderh5.h  coherencytest.cpp  coherencytest.h  daeFilter.h  h5toAnim.cpp  h5toanim.cpp  main.cpp
szip/lib/: libsz.la
tests/: CMakeLists.txt  generate_and_compare.py  simplearm_anim_notflat.dae  simplearm_scene_notflat.dae  test_simplearm.py
