cmake_minimum_required(VERSION 2.6)

project(COLLADATOOLS)
SET(CMAKE_MODULE_PATH "${COLLADATOOLS_SOURCE_DIR}/cmake")
FIND_PACKAGE(COLLADA)
#FIND_PACKAGE(LibXml2)
FIND_PACKAGE(Boost 1.38.0 COMPONENTS program_options filesystem)
ENABLE_TESTING()

set(CMAKE_BUILD_TYPE Debug)
set(EXECUTABLE_OUTPUT_PATH ${COLLADATOOLS_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${COLLADATOOLS_BINARY_DIR}/lib)

add_subdirectory(src)
